cmake_minimum_required(VERSION 3.16)
target_sources( sources PUBLIC
    dgArgument.h
    FunctionDialog.h
    NestingButtonPressed.cpp
    dgFunction.cpp
    FunctionDialogLayout.cpp
    NestingButtonPressed.h
    ArgumentPanel.cpp
    dgFunction.h
    FunctionDialogLayout.h
    NoButtonPressed.cpp
    ArgumentPanel.h
    dgVariable.cpp
    FunctionPanel.cpp
    NoButtonPressed.h
    ClassButtonPressed.cpp
    dgVariable.h
    FunctionPanel.h
    RelationPanel.cpp
    ClassButtonPressed.h
    diagramWindow.cpp
    InheritanceButtonPressed.cpp
    RelationPanel.h
    ClassPanel.cpp
    diagramWindow.h
    InheritanceButtonPressed.h
    State.cpp
    ClassPanel.h
    frameLayout.cpp
    MainFrame.cpp
    State.h
    frameLayout.h
    MainFrame.h
    stateHolder.cpp
    DataButtonPressed.cpp
    FreeState.cpp
    mauseState.cpp
    stateHolder.h
    DataButtonPressed.h
    FriendshipButtonPressed.cpp
    mauseState.h
    VariablePanel.cpp
    DataMemberDialog.cpp
    FriendshipButtonPressed.h
    MemberDialog.cpp
    VariablePanel.h
    DataMemberDialog.h
    FunctionButtonPressed.cpp
    MemberDialog.h
    DerrivedButtonPressed.cpp
    FunctionButtonPressed.h
    MemberPanel.cpp
    dgArgument.cpp
    FunctionDialog.cpp
    MemberPanel.h
  )
find_package(wxWidgets REQUIRED core base)
include(${wxWidgets_USE_FILE})
target_link_libraries(sources ${wxWidgets_LIBRARIES})
